# ships_tracker

./: README.md  manage.py  pyproject.toml
data_files/: 20190801.xlsx
ships_tracker/: manage.py
ships_tracker/celery_app/: celery.py
ships_tracker/settings/: settings.py  urls.py
ships_tracker/ships/: admin.py  apps.py  models.py  routers.py  serializers.py  tasks.py  urls.py  views.py
ships_tracker/ships/migrations/: 0001_initial.py  0002_initial.py
ships_tracker/users/: admin.py  apps.py  models.py
ships_tracker/users/migrations/: 0001_initial.py
ships_tracker/utils/: data_uploader.py  scheduler.py
